@@ -12,7 +12,7 @@ The rules for this file:
 ------------------------------------------------------------------------------
 ??/??/13  orbeckst, jandom, zhuyi.xue, xdeupi, tyler.je.reddy,
           manuel.nuno.melo, danny.parton, sebastien.buchoux, denniej0,
-	  rmcgibbo, richardjgowers
+	  rmcgibbo, richardjgowers,  lennardvanderfeltz
 
   * 0.8.0
 
@@ -76,6 +76,7 @@ The rules for this file:
     users of Mac OS X 10.7 and 10.8 to build MDAnalysis using Apple's
     C-compiler (clang) (Issue 142) although they will not get a parallel
     version of distance_array.
+  * PDB with blank lines gave IndexError (Issue 158)
  
 
 12/24/12 danny.parton, jandom, orbeckst, jjlights03, jphillips, naveen.michaudagrawal, andy.somogyi, sebastien.buchoux
